--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     This is varun branch
-    This is master push
+    This is master push. This is modified by Varun.
 </body>
 </html>
