Conflict By Varun Branch

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     This is varun branch
     This is master push. This is modified by varun.
     This is from master.
+    This is my conflict.
 </body>
 </html>
